配置Gemini 2.5 Pro API

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,17 @@ VITE_ENABLE_ERROR_REPORTING=false
 # 第三方服务
 VITE_SENTRY_DSN=your-sentry-dsn
 VITE_ANALYTICS_ID=your-analytics-id
+
+# Gemini AI 配置
+VITE_GEMINI_API_KEY=your-gemini-api-key
+VITE_GEMINI_MODEL=gemini-2.5-pro
+VITE_GEMINI_BASE_URL=https://generativelanguage.googleapis.com/v1beta
+VITE_GEMINI_MAX_TOKENS=8192
+VITE_GEMINI_TEMPERATURE=0.3
+VITE_GEMINI_TOP_P=0.8
+VITE_GEMINI_TOP_K=40
+
+# AI功能配置
+VITE_AI_GRADING_ENABLED=true
+VITE_AI_ANALYSIS_ENABLED=true
+VITE_AI_SUGGESTION_ENABLED=true
