--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,59 @@
-# API配置
-VITE_API_BASE_URL=http://localhost:5000/api
+# 智阅AI环境配置示例文件
+# 复制此文件为 .env 并填入实际值
 
-# 认证配置
-VITE_JWT_SECRET=your-jwt-secret-key
+# 基础配置
+DEBUG=true
+APP_NAME="智阅AI"
+VERSION="1.0.0"
 
-# 文件上传配置
-VITE_MAX_FILE_SIZE=10485760
-VITE_UPLOAD_URL=http://localhost:5000/upload
+# 数据库配置
+# 开发环境使用SQLite
+DATABASE_URL="sqlite:///./zhiyue_ai.db"
+# 生产环境使用PostgreSQL
+# DATABASE_URL="postgresql://username:password@localhost:5432/zhiyue_ai"
 
-# 功能开关
-VITE_ENABLE_MOCK_DATA=true
-VITE_ENABLE_ERROR_REPORTING=false
+# Redis配置
+REDIS_URL="redis://localhost:6379/0"
+CELERY_BROKER_URL="redis://localhost:6379/1"
+CELERY_RESULT_BACKEND="redis://localhost:6379/2"
 
-# 第三方服务
-VITE_SENTRY_DSN=your-sentry-dsn
-VITE_ANALYTICS_ID=your-analytics-id
+# 安全配置
+SECRET_KEY="your-secret-key-here-change-in-production"
+ALGORITHM="HS256"
+ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Gemini AI 配置
-VITE_GEMINI_API_KEY=your-gemini-api-key
-VITE_GEMINI_MODEL=gemini-2.5-pro
-VITE_GEMINI_BASE_URL=https://generativelanguage.googleapis.com/v1beta
-VITE_GEMINI_MAX_TOKENS=8192
-VITE_GEMINI_TEMPERATURE=0.3
-VITE_GEMINI_TOP_P=0.8
-VITE_GEMINI_TOP_K=40
+# 文件存储配置
+STORAGE_BASE_PATH="./storage"
+MAX_FILE_SIZE=52428800  # 50MB in bytes
+ALLOWED_FILE_EXTENSIONS=".pdf,.jpg,.jpeg,.png,.tiff,.tif"
 
-# AI功能配置
-VITE_AI_GRADING_ENABLED=true
-VITE_AI_ANALYSIS_ENABLED=true
-VITE_AI_SUGGESTION_ENABLED=true
+# Gemini 2.5 Pro OCR配置
+GEMINI_API_KEY="your-gemini-api-key-here"
+GEMINI_MODEL="gemini-2.5-pro"
+GEMINI_BASE_URL="https://generativelanguage.googleapis.com/v1beta"
+GEMINI_MAX_TOKENS=8192
+GEMINI_TEMPERATURE=0.1
+GEMINI_TOP_P=0.8
+GEMINI_TOP_K=40
+
+# OCR特定配置
+OCR_MAX_IMAGE_SIZE=2048
+OCR_BATCH_SIZE=3
+OCR_RETRY_ATTEMPTS=3
+OCR_TIMEOUT=60
+
+# AI服务配置
+AI_GRADING_ENABLED=true
+AI_ANALYSIS_ENABLED=true
+AI_SUGGESTION_ENABLED=true
+
+# 日志配置
+LOG_LEVEL="INFO"
+LOG_FILE="./logs/app.log"
+
+# 监控配置
+SENTRY_DSN=""
+ENABLE_METRICS=true
+
+# WebSocket配置
+WS_URL="ws://localhost:8000"
