清理项目冗余数据
- 删除17个测试文件和临时脚本
- 移除重复的frontend目录
- 清理Python缓存文件(__pycache__, .pytest_cache)
- 删除.DS_Store文件
- 移除重复的虚拟环境目录
- 删除重复的数据库文件
- 更新.gitignore以防止未来的冗余文件

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,64 @@ dist-ssr
 *.sln
 *.sw?
 .env
+
+# Python cache and test files
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+
+# Test files and temporary files
+test_*.py
+test_*.html
+test_*.js
+*.tmp
+*.temp
+*.bak
+*.swp
+*.swo
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Virtual environments
+venv/
+env/
+ENV/
+.venv/
+.env/
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
